force-app/main/default/objects/Billings__c/fields/End_Customer_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Channel_Manager__c</fullName>
    <description>Channel Manager, from Salesforce End Customer Account</description>
    <formula>End_Customer_Account__r.New_Channel_Manager__r.FirstName &amp; &quot; &quot; &amp; End_Customer_Account__r.New_Channel_Manager__r.LastName</formula>
    <inlineHelpText>Channel Manager, from Salesforce End Customer Account</inlineHelpText>
    <label>End Customer Channel Manager</label>
    <type>Text</type>
</CustomField>