force-app/main/default/objects/Billings__c/fields/End_Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Country__c</fullName>
    <inlineHelpText>(From Abacus) Country in which the end customer resides. should be a 2 letter ISO code</inlineHelpText>
    <label>End Customer Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>