force-app/main/default/objects/Billings__c/fields/End_Customer_Project_Owner_Different__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Project_Owner_Different__c</fullName>
    <description>Ticked if End Customer is different from Project Owner</description>
    <formula>End_Customer_Account__r.SF_Account_Number__c &lt;&gt; Project_Owner_Account__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked if End Customer is different from Project Owner</inlineHelpText>
    <label>End Customer Project Owner Different</label>
    <type>Checkbox</type>
</CustomField>