force-app/main/default/objects/Billings__c/fields/End_Customer_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_uB_Office__c</fullName>
    <description>Formula that maps country ISO codes to uB Offices</description>
    <formula>IF(LEN( End_Customer_Account__r.BillingCountry)&lt;&gt;2,
TEXT(End_Customer_Account__r.uB_Office__c),

IF(Contains(&quot;AN:AR:BR:CA:CL:CO:EC:GT:MX:PA:PE:PR:SV:US:UY:VE&quot;, End_Customer_Account__r.BillingCountry),&quot;Americas&quot;,
IF(Contains(&quot;AE:AM:AT:BA:BE:BG:BY:CH:CY:CZ:DE:DK:EE:EG:ES:FI:FR:GB:GE:GR:HR:HU:IE:IQ:IL:IS:IT:JO:KE:KZ:LB:LI:LT:LU:LV:MA:MD:MT:NG:NL:NO:PL:PT:RO:RS:RU:SE:SA:SI:SK:SM:TJ:TR:UA:UK:ZA&quot;, End_Customer_Account__r.BillingCountry),&quot;EMEA&quot;,
IF(Contains(&quot;ID:MY:PH:PK:SG:TH:VN&quot;,End_Customer_Account__r.BillingCountry),&quot;Rest of APAC&quot;,

Case(End_Customer_Account__r.BillingCountry,
&quot;IN&quot;,&quot;India&quot;,
&quot;JP&quot;,&quot;Japan&quot;,
&quot;KR&quot;,&quot;Korea&quot;,
&quot;TW&quot;,&quot;Taiwan&quot;,
&quot;CN&quot;,&quot;China&quot;,
&quot;HK&quot;,&quot;China&quot;,
&quot;AU&quot;,&quot;Australia&quot;,
&quot;NZ&quot;,&quot;Australia&quot;,
TEXT(End_Customer_Account__r.uB_Office__c))
)))
)</formula>
    <inlineHelpText>uB Office in which the end customer resides.</inlineHelpText>
    <label>End Customer uB Office</label>
    <type>Text</type>
</CustomField>