force-app/main/default/objects/Billings__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <description>Internal Abacus Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>Internal Abacus Id.</inlineHelpText>
    <label>ERP ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>