force-app/main/default/objects/Billings__c/fields/ERP_Last_Modified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Modified_DateTime__c</fullName>
    <description>Field synced with abacus field LastModifiedDateTime</description>
    <label>ERP Last Modified Date</label>
    <type>DateTime</type>
</CustomField>