force-app/main/default/objects/Billings__c/fields/ERP_Last_Modified_User__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Modified_User__c</fullName>
    <description>Field synced with abacus field LastModifiedUser</description>
    <label>ERP Last Modified User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>