force-app/main/default/objects/Billings__c/fields/Expected_Contribution_with_IPR_CHF__c.field-meta.xml
<CustomField>
    <fullName>Expected_Contribution_with_IPR_CHF__c</fullName>
    <description>This field displays the contribution in CHF of this order, including the IPR cost for the defined use restriction. If the use restriction is not set to Telematics, Handset, Laptop, or M2M, the Other-IPR-cost are used for calculation.</description>
    <formula>if ( Order_Status__c = &quot;Open&quot;,
Total_Value_CHF__c

- Qty_Ordered__c * IF(ISBLANK(Product__r.COGS_CHF__c),0,Product__r.COGS_CHF__c)

- Total_Value_CHF__c * IF(ISBLANK(Product__r.COGS_Pct__c),0,Product__r.COGS_Pct__c)
- Qty_Ordered__c * $Setup.Constant_Exchange_Rates__c.USD2CHF__c  *	
CASE (IPR_Coverage__c,
&quot;Full coverage&quot;, 
CASE (RIGHT (Use_Restriction__c, LEN(Use_Restriction__c)-FIND(&quot; &quot;,Use_Restriction__c)),
&quot;M2M&quot;, Product__r.IPR_Cost__r.M2M_USD__c,
&quot;Telematics&quot;, Product__r.IPR_Cost__r.Telematics_USD__c, 
&quot;Handset&quot;, Product__r.IPR_Cost__r.Handset_USD__c,
&quot;Laptop&quot;, Product__r.IPR_Cost__r.Laptop_USD__c,
&quot;Other&quot;, Product__r.IPR_Cost__r.Other_USD__c,
0),
&quot;Premium coverage&quot;, 
CASE (RIGHT (Use_Restriction__c, LEN(Use_Restriction__c)-FIND(&quot; &quot;,Use_Restriction__c)),
&quot;M2M&quot;, Product__r.IPR_Cost__r.M2M_USD__c,
&quot;Telematics&quot;, Product__r.IPR_Cost__r.Telematics_USD__c, 
&quot;Handset&quot;, Product__r.IPR_Cost__r.Handset_USD__c,
&quot;Laptop&quot;, Product__r.IPR_Cost__r.Laptop_USD__c,
&quot;Other&quot;, Product__r.IPR_Cost__r.Other_USD__c,
0),
&quot;Prime coverage&quot;,
CASE (RIGHT (Use_Restriction__c, LEN(Use_Restriction__c)-FIND(&quot; &quot;,Use_Restriction__c)),
&quot;M2M&quot;, Product__r.IPR_Cost__r.Prime_M2M_USD__c,
&quot;Telematics&quot;, Product__r.IPR_Cost__r.Prime_Telematics_USD__c, 
0),
0)

- Total_Value_CHF__c *
CASE (IPR_Coverage__c,
&quot;Full coverage&quot;, 
CASE (RIGHT (Use_Restriction__c, LEN(Use_Restriction__c)-FIND(&quot; &quot;,Use_Restriction__c)),
&quot;M2M&quot;, Product__r.IPR_Cost__r.M2M_Pct__c,
&quot;Telematics&quot;, Product__r.IPR_Cost__r.Telematics_Pct__c, 
&quot;Handset&quot;, Product__r.IPR_Cost__r.Handset_Pct__c,
&quot;Laptop&quot;, Product__r.IPR_Cost__r.Laptop_Pct__c,
&quot;Other&quot;, Product__r.IPR_Cost__r.Other_Pct__c,
0),
&quot;Premium coverage&quot;, 
CASE (RIGHT (Use_Restriction__c, LEN(Use_Restriction__c)-FIND(&quot; &quot;,Use_Restriction__c)),
&quot;M2M&quot;, Product__r.IPR_Cost__r.M2M_Pct__c,
&quot;Telematics&quot;, Product__r.IPR_Cost__r.Telematics_Pct__c, 
&quot;Handset&quot;, Product__r.IPR_Cost__r.Handset_Pct__c,
&quot;Laptop&quot;, Product__r.IPR_Cost__r.Laptop_Pct__c,
&quot;Other&quot;, Product__r.IPR_Cost__r.Other_Pct__c,
0),
&quot;Prime coverage&quot;,
CASE (RIGHT (Use_Restriction__c, LEN(Use_Restriction__c)-FIND(&quot; &quot;,Use_Restriction__c)),
&quot;M2M&quot;, Product__r.IPR_Cost__r.Prime_M2M_Pct__c,
&quot;Telematics&quot;, Product__r.IPR_Cost__r.Prime_Telematics_Pct__c, 
0),
0)
, 
if ( Order_Status__c = &quot;Closed&quot;, 
Total_Value_CHF__c - Total_COGS_CHF__c, 0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the contribution in CHF of this order, including the IPR cost for the defined use restriction. If the use restriction is not set to Telematics, Handset, Laptop, or M2M, the Other-IPR-cost are used for calculation.</inlineHelpText>
    <label>Expected Contribution with IPR CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>