force-app/main/default/objects/Billings__c/fields/ExtID__c.field-meta.xml
<CustomField>
    <fullName>ExtID__c</fullName>
    <description>External ID for data import</description>
    <externalId>true</externalId>
    <label>ExtID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>