force-app/main/default/objects/Billings__c/fields/Forecast_Unit_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Unit_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Unit Period</label>
    <referenceTo>Forecast_Unit_Period__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>