force-app/main/default/objects/Billings__c/fields/Frame_Order__c.field-meta.xml
<CustomField>
    <fullName>Frame_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1 if true, 0 else</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Frame Order</label>
    <type>Checkbox</type>
</CustomField>