force-app/main/default/objects/Billings__c/fields/Frame_Order_Alerted__c.field-meta.xml
<CustomField>
    <fullName>Frame_Order_Alerted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked (through Process) once alert was sent.</description>
    <inlineHelpText>Ticked (through Process) once alert was sent.</inlineHelpText>
    <label>Frame Order Alerted</label>
    <type>Checkbox</type>
</CustomField>