force-app/main/default/objects/Billings__c/fields/FU_Name__c.field-meta.xml
<CustomField>
    <fullName>FU_Name__c</fullName>
    <formula>IF( OR(
TEXT(Product__r.Family) =&quot;Royalty&quot;,
TEXT(Product__r.Family) =&quot;Service&quot; ,
TEXT(Product__r.Family) =&quot;Eval kit&quot;,
TEXT(Product__r.Family) =&quot;Sup Prod&quot;,
TEXT(Product__r.Family) =&quot;Other&quot;,
YEAR(TODAY())- YEAR(Delivery_Date__c) &gt; 1 ,
/* option to limit connection to FUP to 12 months in past:
(MONTH(TODAY()-MONTH(Delivery_Date__c)) + (YEAR(TODAY())-YEAR(Delivery_Date__c))*12) &gt; 12, */
TEXT(Product__r.Product_Category__c) =&quot;Support products&quot; ,
TEXT(Product__r.Product_Category__c) =&quot;Internal Use Only&quot; ,
Position_Replaced__c=true ,
Order_Status__c =&quot;Ignore&quot;,
(Qty_Invoiced__c=0) &amp;&amp; (Total_Value_CHF__c=0) &amp;&amp; ( Qty_Ordered__c = 0),
ISBLANK(Product__r.ProductCode),
CONTAINS( Account__r.Name , &quot;u-blox&quot;) 
),&quot;&quot;,

LPAD( Account__r.SF_Account_Number__c, 6, &apos;0&apos;)
&amp;&quot;-&quot;
&amp; 
IF( Product__r.Automotive_Product__c,  Product__r.Type_No__c, Product__r.ProductCode)
&amp;
IF(ISBLANK(SF_Account_Number__c)||LPAD( Account__r.SF_Account_Number__c, 6, &apos;0&apos;)=LPAD( SF_Account_Number__c, 6, &apos;0&apos;) ,
&quot;&quot;,
&quot;-to-&quot; &amp; LPAD( SF_Account_Number__c, 6, &apos;0&apos;)
)
)</formula>
    <inlineHelpText>Checks whether product/order needs to be forceasted. If yes the formula creates the FU name.</inlineHelpText>
    <label>FU Name</label>
    <type>Text</type>
</CustomField>