force-app/main/default/objects/Billings__c/fields/FU_Name_temp__c.field-meta.xml
<CustomField>
    <fullName>FU_Name_temp__c</fullName>
    <formula>IF( OR(
TEXT(Product__r.Family) =&quot;Royalty&quot;,
TEXT(Product__r.Family) =&quot;Service&quot; ,
TEXT(Product__r.Family) =&quot;Sup Prod&quot;,
TEXT(Product__r.Family) =&quot;NRE&quot;,
TEXT(Product__r.Family) =&quot;Other&quot;,
YEAR(TODAY())- YEAR(Delivery_Date__c) &gt; 1 ,
TEXT(Product__r.Product_Category__c) =&quot;Support products&quot; ,
TEXT(Product__r.Product_Category__c) =&quot;Internal Use Only&quot; ,
Position_Replaced__c=true ,
(Qty_Invoiced__c=0) &amp;&amp; (Total_Value_CHF__c=0) &amp;&amp; ( Qty_Ordered__c = 0),
ISBLANK(Product__r.ProductCode)
),&quot;&quot;,

LPAD( Account__r.SF_Account_Number__c, 5, &apos;0&apos;)
&amp;&quot;-&quot;
&amp; Product__r.ProductCode
&amp;
IF(ISBLANK(SF_Account_Number__c)||LPAD( Account__r.SF_Account_Number__c, 5, &apos;0&apos;)=LPAD( SF_Account_Number__c, 5, &apos;0&apos;) ,
&quot;&quot;,
&quot;-to-&quot; &amp; LPAD( SF_Account_Number__c, 5, &apos;0&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FU Name temp</label>
    <type>Text</type>
</CustomField>