force-app/main/default/objects/Billings__c/fields/Help_YTD__c.field-meta.xml
<CustomField>
    <fullName>Help_YTD__c</fullName>
    <formula>IF( TODAY() &gt;= DATE( YEAR(TODAY()) , MONTH(Invoice_Date__c ) ,DAY(Invoice_Date__c ))
,&quot;yes&quot; , &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help YTD</label>
    <type>Text</type>
</CustomField>