force-app/main/default/objects/Billings__c/fields/Initial_order__c.field-meta.xml
<CustomField>
    <fullName>Initial_order__c</fullName>
    <formula>IF(( CreatedDate  - Account__r.CreatedDate  &lt;= 7), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>