force-app/main/default/objects/Billings__c/fields/Inter_Territory_Order__c.field-meta.xml
<CustomField>
    <fullName>Inter_Territory_Order__c</fullName>
    <formula>if(  or(Account_Area__c  &lt;&gt;   Reporting_Area__c,  Account_Region__c  &lt;&gt;  Reporting_Region__c),
&quot;yes&quot;,
&quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yes if Account Area not equal to the Reporting Area</inlineHelpText>
    <label>Inter-Territory Order</label>
    <type>Text</type>
</CustomField>