force-app/main/default/objects/Billings__c/fields/Invoice_Area__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Area__c</fullName>
    <description>Invoice area, imported from Abacus (added for IPR reporting for Siemens)</description>
    <inlineHelpText>(From Abacus) Invoice area</inlineHelpText>
    <label>Invoice Area</label>
    <length>2</length>
    <type>Text</type>
</CustomField>