force-app/main/default/objects/Billings__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date of invoice (valuta). Relevant for reporting</description>
    <inlineHelpText>(From Abacus) Date of invoice (valuta). Relevant for reporting</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>