force-app/main/default/objects/Billings__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>This field is used to determine that a shipment has actually been made. In cases of pre-payment, the invoice quantity and invoice date might be set in order to print a pro-forma invoice, but the shipment awaits the payment.</description>
    <inlineHelpText>(From Abacus) Identification number of the invoice sent to customer.</inlineHelpText>
    <label>Invoice Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>