force-app/main/default/objects/Billings__c/fields/IPR_Coverage__c.field-meta.xml
<CustomField>
    <fullName>IPR_Coverage__c</fullName>
    <inlineHelpText>(From Abacus) Essential Patent coverage by u-blox.</inlineHelpText>
    <label>IPR Coverage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>