force-app/main/default/objects/Billings__c/fields/IPR_Exception__c.field-meta.xml
<CustomField>
    <fullName>IPR_Exception__c</fullName>
    <description>Checked if the invalid combination of Application Type and Use Restriction has been controlled and the explanation in IPR Exception Comment is given.</description>
    <formula>IF(ISBLANK(IPR_Exception_Comment__c), false, true)</formula>
    <inlineHelpText>Checked if the invalid combination of Application Type and Use Restriction has been controlled and the explanation in IPR Exception Comment is given.</inlineHelpText>
    <label>IPR Exception</label>
    <type>Checkbox</type>
</CustomField>