force-app/main/default/objects/Billings__c/fields/IPR_Exception_Comment__c.field-meta.xml
<CustomField>
    <fullName>IPR_Exception_Comment__c</fullName>
    <description>Explanation for the IPR Exception</description>
    <inlineHelpText>Explanation for the IPR Exception</inlineHelpText>
    <label>IPR Exception Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>