force-app/main/default/objects/Billings__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <description>Lead Time = number of days between order date and delivery date</description>
    <formula>Delivery_Date__c  -  Order_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead Time = number of days between order date and delivery date</inlineHelpText>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>