force-app/main/default/objects/Billings__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>from Project Owner Account, or, if not available, from End Customer Account
Added for statistics by :pgou:</description>
    <formula>if(not(isblank(Project_Owner_Account__c)),text(Project_Owner_Account__r.Market__c),if(not(isblank(End_Customer_Account__c)),text(End_Customer_Account__r.Market__c),text(Account__r.Market__c )))</formula>
    <inlineHelpText>from Project Owner Account, or, if not available, from End Customer Account</inlineHelpText>
    <label>Old Market</label>
    <type>Text</type>
</CustomField>