force-app/main/default/objects/Billings__c/fields/Mode_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Delivery__c</fullName>
    <inlineHelpText>(From Abacus) Information about shipping company</inlineHelpText>
    <label>Mode of Delivery</label>
    <length>40</length>
    <type>Text</type>
</CustomField>