force-app/main/default/objects/Billings__c/fields/New_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Application_Type__c</fullName>
    <formula>if(not(isblank(Project_Owner_Account__c)),text(Project_Owner_Account__r.New_Application_Type__c),if(not(isblank(End_Customer_Account__c)),text(End_Customer_Account__r.New_Application_Type__c),text(Account__r.New_Application_Type__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>from Project Owner Account, or, if not available, from End Customer Account</inlineHelpText>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>