force-app/main/default/objects/Billings__c/fields/New_Market__c.field-meta.xml
<CustomField>
    <fullName>New_Market__c</fullName>
    <formula>if(not(isblank(Project_Owner_Account__c)),text(Project_Owner_Account__r.New_Market__c),if(not(isblank(End_Customer_Account__c)),text(End_Customer_Account__r.New_Market__c),text(Account__r.New_Market__c )))</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>