force-app/main/default/objects/Billings__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <inlineHelpText>(From Abacus) Date of order intake.</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>