force-app/main/default/objects/Billings__c/fields/Order_Handling_Region__c.field-meta.xml
<CustomField>
    <fullName>Order_Handling_Region__c</fullName>
    <description>Region imported from Abacus (derived from Region Code)</description>
    <formula>case( Region_Code__c ,
0,&quot;Corporate&quot;,
1,&quot;EMEA&quot;,
2,&quot;EMEA&quot;,
3,&quot;Americas&quot;,
11, &quot;APAC&quot;,
20,&quot;u-blox Italy&quot;,
30,&quot;Fusion Wireless&quot;,
&quot;Corporate&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Region that handles the order (RO code from Abacus)</inlineHelpText>
    <label>Order Handling Region</label>
    <type>Text</type>
</CustomField>