force-app/main/default/objects/Billings__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <description>Order Number</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Order No</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>