force-app/main/default/objects/Billings__c/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Reference</label>
    <referenceTo>Billings__c</referenceTo>
    <relationshipLabel>Related Orders / Fees</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>