force-app/main/default/objects/Billings__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <formula>IF ( Product_ID__c = &quot;VIA-CB-C&quot;, &quot;Ignore&quot;,
IF( (Qty_Invoiced__c=0)  &amp;&amp; (Total_Value_CHF__c=0) &amp;&amp; ( Qty_Ordered__c = 0), &quot;Ignore&quot;,
IF(Position_Replaced__c=false,
                    IF( ISNULL(Invoice_Date__c)  ||   Qty_Invoiced__c =0 || ISNULL( Invoice_Number__c ) || Invoice_Number__c =&quot;0&quot;, &quot;Open&quot;, &quot;Closed&quot;),
                    &quot;Position Replaced&quot; )
))</formula>
    <inlineHelpText>Values:
- Billing
- Open Order
- Position Replaced
- Ignore</inlineHelpText>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>