force-app/main/default/objects/Billings__c/fields/Package_type__c.field-meta.xml
<CustomField>
    <fullName>Package_type__c</fullName>
    <formula>Case( Product__r.Family,
&quot;AMY&quot;,&quot;SiP&quot;,
&quot;IC&quot;,&quot;IC&quot;,
&quot;NEO&quot;,&quot;Module&quot;,
&quot;LEA&quot;,&quot;Module&quot;,
&quot;TIM&quot;,&quot;Module&quot;,
&quot;RCB&quot;,&quot;Module&quot;,
&quot;PCI&quot;,&quot;Module&quot;,
&quot;PCM&quot;,&quot;Module&quot;,
&quot;Other&quot;)</formula>
    <label>Package type</label>
    <type>Text</type>
</CustomField>