force-app/main/default/objects/Billings__c/fields/Packaging_Size__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Size__c</fullName>
    <formula>Product__r.Packaging_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packaging Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>