force-app/main/default/objects/Billings__c/fields/PartnerReportAccNum__c.field-meta.xml
<CustomField>
    <fullName>PartnerReportAccNum__c</fullName>
    <formula>Account__r.SF_Account_Number__c   &amp; &quot;,&quot; &amp;
End_Customer_Account__r.SF_Account_Number__c  &amp; &quot;,&quot; &amp;  Project_Owner_Account__r.SF_Account_Number__c &amp;&quot;,&quot;</formula>
    <label>PartnerReportAccNum</label>
    <type>Text</type>
</CustomField>