force-app/main/default/objects/Billings__c/fields/Period_Billings_Last_14mo__c.field-meta.xml
<CustomField>
    <fullName>Period_Billings_Last_14mo__c</fullName>
    <formula>IF((	
	MONTH( Invoice_Date__c ) - MONTH(TODAY())
	+
	(YEAR( Invoice_Date__c ) - YEAR (TODAY()))*12
	)	
&gt; -14
,	
1	
,	
0	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if invoice date is within the last 14 months, current month and future months included.</inlineHelpText>
    <label>Period Billings Last 14mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>