force-app/main/default/objects/Billings__c/fields/Period_Billings_Last_6mo__c.field-meta.xml
<CustomField>
    <fullName>Period_Billings_Last_6mo__c</fullName>
    <formula>IF((
	MONTH( Invoice_Date__c ) - MONTH(TODAY())
	+
	(YEAR(Invoice_Date__c ) - YEAR (TODAY()))*12
	)	
&gt; -7
,	
1	
,	
0	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if Invoice date within 6 months in the past or in the future</inlineHelpText>
    <label>Period Billings Last 6mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>