force-app/main/default/objects/Billings__c/fields/Period_Bookings_Last_14mo__c.field-meta.xml
<CustomField>
    <fullName>Period_Bookings_Last_14mo__c</fullName>
    <formula>IF((
MONTH( Order_Date__c ) - MONTH(TODAY())
+
(YEAR( Order_Date__c ) - YEAR (TODAY()))*12
)
&gt; -14
,
1
,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if order date is within the last 14 months, current month and future months included.</inlineHelpText>
    <label>Period Bookings Last 14mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>