force-app/main/default/objects/Billings__c/fields/Period_Delivery_Last_14mo_Future__c.field-meta.xml
<CustomField>
    <fullName>Period_Delivery_Last_14mo_Future__c</fullName>
    <formula>IF((
MONTH( Delivery_Date__c ) - MONTH(TODAY())
+
(YEAR( Delivery_Date__c ) - YEAR (TODAY()))*12
)
&gt; -14
,
1
,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Orders with delivery date 14 months in the past and in the future. Can be used to display both the closed and open orders in one graph.</inlineHelpText>
    <label>Period Delivery Last 14mo and Future</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>