force-app/main/default/objects/Billings__c/fields/PO_No_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PO_No_Line_Item__c</fullName>
    <description>From Abacus</description>
    <inlineHelpText>From Abacus</inlineHelpText>
    <label>PO No Line Item</label>
    <length>40</length>
    <type>Text</type>
</CustomField>