force-app/main/default/objects/Billings__c/fields/Position_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Position_Replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(From Abacus) When checked, the order entry is not used for billings</inlineHelpText>
    <label>Position Replaced</label>
    <type>Checkbox</type>
</CustomField>