force-app/main/default/objects/Billings__c/fields/Prev_Yr_Billing__c.field-meta.xml
<CustomField>
    <fullName>Prev_Yr_Billing__c</fullName>
    <description>The comparison makes use of a shift of 4 days. This allows to calculate the business dashboards at the beginning of a new year.</description>
    <formula>if( year(Invoice_Date__c)  = year(today()-4)-1,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if invoice date in previous year. 0 else</inlineHelpText>
    <label>Prev Yr Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>