force-app/main/default/objects/Billings__c/fields/Prev_Yr_Billing_CHF__c.field-meta.xml
<CustomField>
    <fullName>Prev_Yr_Billing_CHF__c</fullName>
    <description>Equal to Prev Yr * Total Value CHF. (weighted Prev Yr)</description>
    <formula>Prev_Yr_Billing__c  *  Total_Value_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>weighted Prev Yr
=&gt; if Billing happened in previous year, the field is equal to Total Value CHF. Else it is zero.</inlineHelpText>
    <label>Prev Yr Billing CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>