force-app/main/default/objects/Billings__c/fields/Prev_Yr_Booking__c.field-meta.xml
<CustomField>
    <fullName>Prev_Yr_Booking__c</fullName>
    <formula>if( year(Order_Date__c)  = year(today()-4)-1,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if order date in previous year. 0 else</inlineHelpText>
    <label>Prev Yr Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>