force-app/main/default/objects/Billings__c/fields/Prev_Yr_Booking_CHF__c.field-meta.xml
<CustomField>
    <fullName>Prev_Yr_Booking_CHF__c</fullName>
    <formula>Prev_Yr_Booking__c  *  Total_Value_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>weighted Bookings Prev Yr
=&gt; if Booking happened in previous year, the field is equal to Total Value CHF. Else it is zero.</inlineHelpText>
    <label>Prev Yr Booking CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>