force-app/main/default/objects/Billings__c/fields/Prev_Yr_YTD_Billing__c.field-meta.xml
<CustomField>
    <fullName>Prev_Yr_YTD_Billing__c</fullName>
    <formula>if( and(
year(Invoice_Date__c) = year(today()-4)-1,
Invoice_Date__c &lt; (today()-365)
),
1,0)</formula>
    <inlineHelpText>if invoice date last year and earlier than one year ago: 1
0 else</inlineHelpText>
    <label>Prev Yr YTD Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>