force-app/main/default/objects/Billings__c/fields/Price_CHF__c.field-meta.xml
<CustomField>
    <fullName>Price_CHF__c</fullName>
    <formula>if( Qty_Invoiced__c =0,0,Total_Value_CHF__c / Qty_Invoiced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>price per unit in CHF (with Abacus exchange rate)</inlineHelpText>
    <label>Price CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>