force-app/main/default/objects/Billings__c/fields/Price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_unit__c</fullName>
    <inlineHelpText>(From Abacus) Price per unit in local currency</inlineHelpText>
    <label>Price per unit</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>