force-app/main/default/objects/Billings__c/fields/Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Price_USD__c</fullName>
    <description>Calculated (Total_Value_USD__c / Qty_Invoiced__c), like Price_CHF__c. Made for one KPI  (Added Value) of BSC.</description>
    <formula>if( Qty_Invoiced__c =0,0,Total_Value_USD__c / Qty_Invoiced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated (Total_Value_USD__c / Qty_Invoiced__c), like Price_CHF__c. Made for one KPI  (Added Value) of BSC.</inlineHelpText>
    <label>Price USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>