force-app/main/default/objects/Billings__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Required for segmentation reports with end customers, as the product fields are not accessible.</description>
    <formula>text(Product__r.Product_Category__c)</formula>
    <inlineHelpText>Product Category, copied from Product</inlineHelpText>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>