force-app/main/default/objects/Billings__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <description>Product identification</description>
    <inlineHelpText>(From Abacus) Product identification. Used to match with field &quot;Type No&quot; in Salesforce products.</inlineHelpText>
    <label>Type Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>