force-app/main/default/objects/Billings__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Used to match Contribution Share</description>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to match Contribution Share</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>