force-app/main/default/objects/Billings__c/fields/Product_WL_Technology__c.field-meta.xml
<CustomField>
    <fullName>Product_WL_Technology__c</fullName>
    <formula>text( Product__r.Cellular_Technology__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>from Product information</inlineHelpText>
    <label>Product WL Technology</label>
    <type>Text</type>
</CustomField>