force-app/main/default/objects/Billings__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <inlineHelpText>(From Abacus) Project owner of this order item. Entered as text in Abacus.</inlineHelpText>
    <label>Project Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>